test/errors/type/list/insert.yasl
mt.lookup([], .insert)(undef, 1, true)
